--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -102,14 +102,13 @@
 
 
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/cv_getStarted"
+                    android:id="@+id/cv_login"
                     android:enabled="true"
-                    android:onClick="@{()->viewmodel.login()}"
+
                     android:layout_margin="20dp"
                     android:layout_width="match_parent"
                     android:layout_height="45dp"
-                    app:cardCornerRadius="10dp"
-                    >
+                    app:cardCornerRadius="10dp">
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
